--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include("prefabs/head", { title: "登录" }); %>
+    <%- include("head", { title: "登录" }); %>
 </head>
 <body>
 <div class="flex flex-col items-center h-screen md:flex-row">
