--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,8 +26,10 @@
                 </div>
                 <button class="block w-full px-4 py-3 mt-6 font-semibold text-center text-white bg-indigo-500 rounded-lg shadow hover:bg-indigo-400 focus:bg-indigo-400" onclick="login()">登录</button>
             </div>
-            <hr class="w-full my-6 border-gray-300">
-            <p class="mt-8">还没有账号？ <a href="#" class="font-semibold text-blue-500 hover:text-blue-700">点我注册！</a></p>
+            <% if (register){ %>
+                <hr class="w-full my-6 border-gray-300">
+                <p class="mt-8">还没有账号？ <a href="/register" class="font-semibold text-blue-500 hover:text-blue-700">点我注册！</a></p>
+            <% } %>
         </div>
     </div>
 </div>
@@ -35,7 +37,7 @@
 <script>
     function login() {
         $.ajax({
-            url: "/login",
+            url: "/api/user/login",
             type: "POST",
             data: {
                 username: document.getElementById("username").value,
