--- a/plugins/ecoPrefabs/dashboard.ejs
+++ b/plugins/ecoPrefabs/dashboard.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include("../../head", { title: "eco" }); %>
+    <%- include("head", { title: "eco" }); %>
 </head>
 <body>
 <main class="bg-gray-100 dark:bg-gray-800 h-screen overflow-hidden relative">
