--- a/plugins/ecoPrefabs/login.ejs
+++ b/plugins/ecoPrefabs/login.ejs
@@ -10,6 +10,32 @@
     </div>
     <div class="flex items-center justify-center w-full h-screen px-6 bg-white md:max-w-md lg:max-w-full md:mx-auto md:mx-0 md:w-1/2 xl:w-1/3 lg:px-16 xl:px-12">
         <div class="w-full h-100">
+            <div id="error" class="flex w-full max-w-sm mx-auto mb-1 overflow-hidden bg-white rounded-lg shadow dark:bg-gray-800" style="display: none;">
+                <div class="flex items-center justify-center w-12 bg-red-500">
+                    <svg class="w-6 h-6 text-white fill-current" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20 3.36667C10.8167 3.36667 3.3667 10.8167 3.3667 20C3.3667 29.1833 10.8167 36.6333 20 36.6333C29.1834 36.6333 36.6334 29.1833 36.6334 20C36.6334 10.8167 29.1834 3.36667 20 3.36667ZM19.1334 33.3333V22.9H13.3334L21.6667 6.66667V17.1H27.25L19.1334 33.3333Z"/>
+                    </svg>
+                </div>
+                <div class="px-4 py-2 -mx-3">
+                    <div class="mx-3">
+                        <span class="font-semibold text-red-500 dark:text-red-400">错误</span>
+                        <p class="text-sm text-gray-600 dark:text-gray-200">用户名密码错误！</p>
+                    </div>
+                </div>
+            </div>
+            <div id="non-existent" class="flex w-full max-w-sm mx-auto mb-1 overflow-hidden bg-white rounded-lg shadow dark:bg-gray-800" style="display: none;">
+                <div class="flex items-center justify-center w-12 bg-red-500">
+                    <svg class="w-6 h-6 text-white fill-current" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20 3.36667C10.8167 3.36667 3.3667 10.8167 3.3667 20C3.3667 29.1833 10.8167 36.6333 20 36.6333C29.1834 36.6333 36.6334 29.1833 36.6334 20C36.6334 10.8167 29.1834 3.36667 20 3.36667ZM19.1334 33.3333V22.9H13.3334L21.6667 6.66667V17.1H27.25L19.1334 33.3333Z"/>
+                    </svg>
+                </div>
+                <div class="px-4 py-2 -mx-3">
+                    <div class="mx-3">
+                        <span class="font-semibold text-red-500 dark:text-red-400">错误</span>
+                        <p class="text-sm text-gray-600 dark:text-gray-200">用户不存在！</p>
+                    </div>
+                </div>
+            </div>
             <h1 class="inline-block mt-12 text-2xl font-bold leading-tight md:text-2xl"><img src="../img/favicon.svg" alt="" width=50></h1>
             <h1 class="inline-block mx-1 mt-12 text-3xl font-bold leading-tight md:text-3xl">登录</h1>
             <div class="mt-6">
@@ -47,6 +73,14 @@
             success: function(data) {
                 if (data["stauts"] === "success") {
                     window.location.href = "/";
+                }
+                if (data["stauts"] === "error") {
+                    $("#non-existent").hide();
+                    $("#error").show();
+                }
+                if (data["stauts"] === "non-existent") {
+                    $("#error").hide();
+                    $("#non-existent").show();
                 }
             }
         });
