--- a/plugins/ecoPrefabs/login.ejs
+++ b/plugins/ecoPrefabs/login.ejs
@@ -51,7 +51,7 @@
                 <div class="mt-2 text-right">
                     <a href="#" class="text-sm font-semibold text-gray-700 hover:text-blue-700 focus:text-blue-700">忘记密码？</a>
                 </div>
-                <button class="block w-full px-4 py-3 mt-6 font-semibold text-center text-white bg-indigo-500 rounded-lg shadow hover:bg-indigo-400 focus:bg-indigo-400" onclick="login()">登录</button>
+                <button type="submit" class="block w-full px-4 py-3 mt-6 font-semibold text-center text-white bg-indigo-500 rounded-lg shadow hover:bg-indigo-400 focus:bg-indigo-400" onclick="login()">登录</button>
             </div>
             <% if (register){ %>
                 <hr class="w-full my-6 border-gray-300">
